--- a/kasimi/faviconnotifications/styles/all/template/event/overall_header_head_append.html
+++ b/kasimi/faviconnotifications/styles/all/template/event/overall_header_head_append.html
@@ -1,3 +1,4 @@
-<!-- IF S_USER_LOGGED_IN and not S_IS_BOT and NOTIFICATIONS_COUNT > 0 -->
+<!-- IF S_USER_LOGGED_IN and not S_IS_BOT -->
 	<!-- INCLUDEJS js/favico-0.3.10.min.js -->
+	<!-- INCLUDEJS js/faviconnotifications.js -->
 <!-- ENDIF -->
