--- a/kasimi/faviconnotifications/styles/all/template/event/overall_header_head_append.html
+++ b/kasimi/faviconnotifications/styles/all/template/event/overall_header_head_append.html
@@ -1,4 +1,4 @@
 {% if S_USER_LOGGED_IN and not S_IS_BOT %}
-	{% INCLUDEJS 'js/favico-0.3.10.min.js' %}
+	{% INCLUDEJS 'js/favico-0.3.10.dev.js' %}
 	{% INCLUDEJS 'js/faviconnotifications.js' %}
 {% endif %}
